# risc_simulator

./: .gitignore  .rubocop.yml  CMakeLists.txt  CMakelists.txt  main.cpp  main.rb  readme.md  run_x86.sh  test.rb
config/: CMakeLists.txt  config.conf  configx86.conf  prog_config.hpp  sim_config.hpp
cs_dsl/: constant.rb  decoder_generator.rb  instruction_builder.rb  main.rb  pc.rb  scope.rb  utils.rb  var.rb  yml_parser.rb
cs_dsl/instructions_formats.rb/: I.rb  J.rb  R.rb  S.rb
decode_execute_module/: CMakeLists.txt  CMakelists.txt  decoder.cpp  decoder.hpp  instruction_opcodes_gen.hpp
decode_execute_module/decoder/: CMakeLists.txt  CMakelists.txt  rv32i_decoder_gen.cpp  rv32i_decoder_gen.hpp
decode_execute_module/decoder/tests/: CMakeLists.txt  CMakelists.txt  decoder_test.hpp
decode_execute_module/executer/: CMakeLists.txt  rv32i_executer_gen.cpp  rv32i_executer_gen.hpp
e2e_tests/: 1.elf  8-queens.c  fact.cpp  fib.c  fib.elf  fib64.elf  queens.c  queens.elf  simple.ld  sum.c  sum.elf  tmp.elf  virtual_memory.c  virtual_memory.elf
include/: block_cache.hpp  common.hpp  hart.hpp  machine.hpp  memory.hpp
isa/: rv32i_isa.yml  rv64i_isa.yml
isa/dsl/: constant.rb  instruction_builder.rb  main.rb  rv32i_decoder_gen.rb  rv32i_executer_gen.rb  rv64i_executer_gen.rb  scope.rb  utils.rb
isa/dsl/instructions_formats/: I.rb  J.rb  R.rb  U.rb
isa_dsl/: main.rb  rv32i_decoder_gen.rb  rv32i_executer_gen.rb  scope.rb  var.rb  yml_parser.rb
isa_dsl/instructions_formats/: B.rb
isas/: rv32i_isa.yml
src/: CMakeLists.txt  block_cache.cpp  hart.cpp  machine.cpp  main.cpp  memory.cpp
src/decode_execute_module/: CMakeLists.txt  common.hpp  instruction_opcodes_gen.hpp
src/decode_execute_module/decoder/: CMakeLists.txt  rv32i_decoder_gen.cpp  rv32i_decoder_gen.hpp
src/decode_execute_module/decoder/tests/: CMakeLists.txt  decoder_test.hpp  main.cpp  test_data.txt
src/decode_execute_module/executer/: CMakeLists.txt  rv32i_executer_gen.cpp  rv32i_executer_gen.hpp
src/decode_execute_module/jit/: CMakelists.txt  compiler.cpp  compiler.hpp  jit_basic_block.hpp  jit_instruction.hpp  jit_instruction_factory.hpp
src/hart/: CMakeLists.txt  block_cache.cpp  block_cache.hpp  hart.cpp  hart.hpp  hart_common.hpp  threaded_code.hpp
src/hart/jit/: CMakelists.txt  basic_block.hpp  block_cache.cpp  block_cache.hpp  compiler.cpp  compiler.hpp  jit_basic_block.hpp  jit_instruction_factory.cpp  jit_instruction_factory.hpp  naive_cache.cpp  naive_cache.hpp  trampolines.cpp
src/hart/jit/utils/: cache.hpp  lru_cache.hpp
src/machine/: CMakeLists.txt  machine.cpp  machine.hpp
src/memory/: CMakeLists.txt  access.hpp  memory.cpp  memory.hpp  memory_types.hpp  mmu.cpp  mmu.hpp  tlb.hpp
src/modules/: CMakeLists.txt  example_module.cpp  example_module.hpp
src/modules_api/: callbacks.hpp  module.hpp
